    Fixed a bug where excavation treasures only required level 0 instead of loading the value from the config
    Fixed a bug where /fishing was showing the wrong shake chance
    Default Shake chance increased from 15% to 30% (update advanced.yml manually or delete the file to regenerate it and receive these changes)
    Removed entries for ranks 2-8 of Shake from advanced.yml (Shake only has one rank, these entries were a mistake)
    Modified the warning about UltraPermissions

    NOTES:
    This update makes changes to treasures.yml automatically to apply the fix, you don't need to do anything
    The latest versions of UltraPermissions should play nicely with mcMMO, but older versions do not. Make sure to update UltraPermissions.

Version 2.1.187
    Fixed a ClassCastException error involving Rupture

Version 2.1.186
    Rupture has been reworked to solve a few outstanding issues (see notes)
    Fixed an exploit involving enchantments (thanks TheBusyBiscuit)
    Fixed a very small memory leak that would only happen in very rare situations
    Fixed a bug where XP wasn't granted while sneaking and interacting with a berry bush
    Gore no longer applies Rupture
    Gore no longer sends a message to the Wolf owner when it triggers
    Gore no longer sends a message to players that are hit by it
    Rupture no longer sends a message telling you that your target is bleeding
    Updated locale string 'Swords.SubSkill.Rupture.Description'
    Updated locale string 'Swords.SubSkill.Rupture.Stat.Extra'
    Updated locale string 'Swords.Combat.Rupture.Note'
    Added locale string 'Swords.SubSkill.Rupture.Stat.TickDamage'
    Added locale string 'Swords.SubSkill.Rupture.Stat.ExplosionDamage'
    Added 'Skills.Swords.Rupture.Rupture_Mechanics.Chance_To_Apply_On_Hit' to advanced.yml
    Added 'Skills.Swords.Rupture.Rupture_Mechanics.Duration_In_Seconds.Against_Players' to advanced.yml