@@ -268,7 +268,9 @@ public class mcMMO extends JavaPlugin {
             }
 
             if(pluginManager.getPlugin(ULTRA_PERMISSONS) != null) {
-                getLogger().info("mcMMO has detected UltraPermissions is running, make sure to keep both mcMMO and UltraPermissions updated as older versions of UltraPermissions had performance degradation issues when used in conjunction with mcMMO");
+                Bukkit.getScheduler().runTaskLater(this, () -> {
+                    getLogger().severe("mcMMO and UltraPermissions have a severe conflict resulting in extreme server performance degradation, an update will be available soon (according to the UltraPermission devs) that will fix this issue. For now it is not advised to use these plugins at the same time. It is advised that you keep mcMMO and UltraPermission up to date.");
+                }, 20);
             }
         }
 
